# SurgView

./: .CmakeLists.txt.swp  .gitignore  .speech.cpp.swo  CMakeLists.txt  Makefile  README.md  SurgView.py  calculator.py  check_azure_speech.py  check_capture_usb.py  check_serial.py  check_stream.py  controller.py  environment.yml  event_handler.py  events.py  input_controller.py  install_dependencies.sh  logs.py  mapping.py  requirements.txt  scribe.py  speech  speech.cpp  speech.py  test.py  test_azure_speech.py  test_calculator.py  test_mapping.py  test_serial.py  test_view.py  utils.py  view.py  viewer.py
.circleci/: config.yml
interface_assets/steris/home_page_root_templates/: home_page_root.jpg.json  home_page_root2.jpg.json  homepg1_highContrastBW.png.json  homepg2_highContrastBW.jpg.json
logs/: logs.md
read_screen/: clean.py  clean_image.py  contour_matching.py  extract.py  extract_text.py  ocr_space_matching.py  ocr_space_methods.py  template_matching.py  test_view.py  view.py
